--- a/web/index.html
+++ b/web/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Anger Issues</title>
+    <title>Anger Management</title>
 </head>
 <ul>
     <li><a class="active" href="index.html">Home</a></li>
     <li><a href="tips.html">Tips</a></li>
     <li><a href="signs.html">Signs</a></li>
     <li><a href="about.html">About</a></li>
+    <li><a href="inquiry.html">Inquiry</a></li>
   </ul>
 <body>
     <section class="hero-image">
