--- a/web/tips.html
+++ b/web/tips.html
@@ -11,6 +11,7 @@
     <li><a href="tips.html">Tips</a></li>
     <li><a href="signs.html">Signs</a></li>
     <li><a href="about.html">About</a></li>
+    <li><a href="inquiry.html">Inquiry</a></li>
   </ul>
 <body>
     <section class="hero-image">
