--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@
 <li><a href="tips.html">Tips</a></li> 
 <li><a href="signs.html">Signs</a></li> 
 <li><a href="about.html">About</a></li>
+ <li><a href="inquiry.html">Inquiry</a></li>
 </ul> 
 <body>
 <!-- Two columns layout start --> 
